--- a/identidadlatas.html
+++ b/identidadlatas.html
@@ -13,13 +13,12 @@
         <section class="detalle-galeria">
             <div class="contenedor">
                 <img src="./img/proyectos/img-proyectos-detalle/latas.jpg" alt="imagen afiche" width="1300"
-                    height="870px">
+                    height="916px">
             </div>
             <div class="detalle-titulo">
                 <div class="boton-volver">
                     <a href="misproyectos.html">
-                        <img src="./img/iconos/cruz.png" alt="volver atras" width="60px"
-                            height="60px">
+                        <img src="./img/iconos/cruz.png" alt="volver atras" width="45px" height="45px">
                     </a>
                 </div>
                 <article class="info-proyecto">
