--- a/irisvanherpen.html
+++ b/irisvanherpen.html
@@ -11,28 +11,27 @@
 <body>
     <main>
         <section class="detalle-galeria">
-                <div class="contenedor">
-                    <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="1300"
-                        height="870px">
+            <div class="contenedor">
+                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="1300"
+                    height="916px">
+            </div>
+            <div class="detalle-titulo">
+                <div class="boton-volver">
+                    <a href="misproyectos.html">
+                        <img src="./img/iconos/cruz.png" alt="volver atras" width="45px" height="45px">
+                    </a>
                 </div>
-                <div class="detalle-titulo">
-                    <div class="boton-volver">
-                        <a href="misproyectos.html">
-                            <img src="./img/iconos/cruz.png" alt="volver atras" width="50px"
-                                height="50px">
-                        </a>
-                    </div>
-                    <article class="info-proyecto">
-                        <h2>Afiche cultural</h2>
-                        <h3>Iris Van Herpen</h3>
-                        <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                            del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
-                            herpen
-                            una
-                            diseñadora de moda Holandesa</p>
-                    </article>
-                </div>
-            </section>
+                <article class="info-proyecto">
+                    <h2>Afiche cultural</h2>
+                    <h3>Iris Van Herpen</h3>
+                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
+                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
+                        herpen
+                        una
+                        diseñadora de moda Holandesa</p>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 
