--- a/jacquelinecasey.html
+++ b/jacquelinecasey.html
@@ -13,26 +13,28 @@
         <section class="detalle-galeria">
             <div class="contenedor">
                 <img src="./img/proyectos/img-proyectos-detalle/jaquelinecasey.jpg" alt="imagen afiche" width="1300"
-                    height="870px">
+                    height="916px">
             </div>
             <div class="detalle-titulo">
-                    <div class="boton-volver">
-                <a href="misproyectos.html">
-                    <img src="./img/iconos/cruz.png" alt="volver atras" width="50px"
-                        height="50px">
-                </a>
-            </div>
+                <div class="boton-volver">
+                    <a href="misproyectos.html">
+                        <img src="./img/iconos/cruz.png" alt="volver atras" width="45px" height="45px">
+                    </a>
+                </div>
                 <article class="info-proyecto">
                     <h2>*/ editorial</h2>
                     <h3>Catálogo de artista</h3>
-                    <p>Trabajo editorial realizado para la materia espacio tipográfico III, 
-                    es un catalogo de artista inspirado en la diseñadora grafica Jaqueline Casey. Se tomo su estilo para el desarrollo del mismo y se desatacaron sus trabajos mas importantes.</p>
+                    <p>Trabajo editorial realizado para la materia espacio tipográfico III,
+                        es un catalogo de artista inspirado en la diseñadora grafica Jaqueline Casey. Se tomo su estilo
+                        para el desarrollo del mismo y se desatacaron sus trabajos mas importantes.</p>
                 </article>
                 <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista" alt="Diseño de libtos" target="_blank">visitar</a>
+                    <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
+                        alt="Diseño de libtos" target="_blank">visitar</a>
                 </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
