--- a/sobremi.html
+++ b/sobremi.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo/ sobre mi </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico"  type="image/x-icon">
 </head>
 
 <body>
@@ -27,11 +27,11 @@
         <section id="mipresentacion">
             <div class="nombre">
                 <h2>*/Natalia Oviedo</h2>
-                <img src="./img/ilustraciones/ilustracion-avion.png" alt="ilustracion de avión" width="350px"
+                <img src="./img/ilustraciones-todas/ilustracion-avion.png" alt="ilustracion de avión" width="350px"
                     height="150px">
             </div>
             <div class="mipresentacion">
-                <img src="./img/sobremi/fotos/torresdelp.jpg" alt="foto en torres del paine, Chile" width="450px"
+                <img src="./img/sobremi/fotos/torresdelpaine.jpg" alt="foto en torres del paine, Chile" width="450px"
                     height="580px">
                 <article class="presentacion">
                     <h3>Diseñadora gráfica Jr.</h3>
@@ -62,7 +62,7 @@
                 <li>pienso</li>
                 <li>viajo</li>
             </ul>
-            <img src="./img/giff/ilustracion.gif" class="gif" alt="animacion de lineas" width="90%" height="430px">
+            <img src="./img/sobremi/giff/ilustracion.gif" class="gif" alt="animacion de lineas" width="1920" height="430">
         </section>
         <section class="informacion-personal"> <!---ver si este div es necesario--->
             <div class="grid-item uno">
@@ -92,13 +92,13 @@
             <div class="grid-item cuatro">
                 <h3>*/ Habilidades</h3>
                 <ul class="info-lista2">
-                    <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
+                    <li><img src="./img/sobremi/logos-habilidades/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
                     </li>
-                    <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px">
+                    <li><img src="./img/sobremi/logos-habilidades/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px">
                     </li>
-                    <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne" width="60px" height="60px">
+                    <li><img src="./img/sobremi/logos-habilidades/indesign.png" alt=" Logo Indesigne" width="60px" height="60px">
                     </li>
-                    <li><img src="./img/logos/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
+                    <li><img src="./img/sobremi/logos-habilidades/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
                 </ul>
             </div>
         </section>
@@ -106,23 +106,23 @@
     <footer id="contacto">
         <div class="redes">
             <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
-                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+                <img class="icon" src="img/logos footer/instagram.png" alt="Logo instagram" width="40px" height="40px">
             </a>
             <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
-                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+                <img class="icon" src="img/logos footer/behance.png" alt="behance logo" width="40px" height="40px">
             </a>
         </div>
         <div class="mensaje">
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <img class="icon" src="img/logos footer/linkedin.png" alt="instagram logo" width="50px" height="50px">
                     <h4>Linkedin</h4>
                 </a>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                    <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <img src="./img/logos footer/gmail.png" alt="gmail logo"  width="50px" height="50px">
                     <h4>natiioviedo92@gmail.com</h4>
                 </a>
             </div>
