--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header>
         <nav id="botonera">
             <div class="logo">
-                <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                <a href="index.html">
+                    <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                </a>
             </div>
             <div class="botones">
                 <a href="sobremi.html">Sobre mi</a>
@@ -50,11 +52,6 @@
                 <a href="sobremi.html">sobre mi </a>
                 <a href="misproyectos.html">mis proyectos</a>
             </div>
-            <div>
-                <a href="#botonera" class="volver-arriba">
-                    <img src="./img/iconos/button.png" alt="volver-arriba" width="60px" height="60px">
-                </a>
-            </div>
             <div class="saludo-final">
                 <div class="despedida">
                     <h2>contactame</h2>
@@ -71,23 +68,23 @@
     <footer id="contacto">
         <div class="redes">
             <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
-                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+                <img class="icon" src="img/logos footer/instagram.png" alt="Logo instagram" width="40px" height="40px">
             </a>
             <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
-                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+                <img class="icon" src="img/logos footer/behance.png" alt="behance" width="40px" height="40px">
             </a>
         </div>
         <div class="mensaje">
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <img class="icon" src="img/logos footer/linkedin.png" alt="instagram" width="50px" height="50px">
                     <h4>Linkedin</h4>
                 </a>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                    <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <img src="./img/logos footer/gmail.png" alt="logo gmail" width="50px" height="50px">
                     <h4>natiioviedo92@gmail.com</h4>
                 </a>
             </div>
