--- a/infografia.html
+++ b/infografia.html
@@ -13,13 +13,12 @@
         <section class="detalle-galeria">
             <div class="contenedor">
                 <img src="./img/proyectos/img-proyectos-detalle/infografia.jpg" alt="imagen afiche" width="1300"
-                    height="880px">
+                    height="916px">
             </div>
             <div class="detalle-titulo">
                 <div class="boton-volver">
                     <a href="misproyectos.html">
-                        <img src="./img/iconos/cruz.png" alt="volver atras" width="50px"
-                            height="50px">
+                        <img src="./img/iconos/cruz.png" alt="volver atras" width="45px" height="45px">
                     </a>
                 </div>
                 <article class="info-proyecto">
