--- a/misproyectos.html
+++ b/misproyectos.html
@@ -31,52 +31,60 @@
                     <p>Te invito a ver algunos de mis trabajos realizados</p>
                 </div>
                 <div class="ilustracion2">
-                    <img src="./img/ilustraciones/herramientas.png" alt="animacion brillo" width="404px" height="170px">
+                    <img src="./img/ilustraciones-todas/herramientas.png" alt="ilustracion de avion con herramientas"
+                        width="404px" height="170px">
                 </div>
             </div>
             <div class="carousel-container">
                 <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
                 <div class="carousel">
                     <div class="carousel-track" id="carousel-track">
-                        <!-- Proyecto 1 -->
+                        <!-- proyecto 1 -->
                         <div class="carousel-item">
-                            <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg"
-                                alt="Afiche Iris van Herpen">
+                            <a href="irisvanherpen.html">
+                                <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg"
+                                    alt="Afiche Iris van Herpen" width="200px" height="283px">
+                            </a>
                             <h4>Afiche</h4>
-                            <a class="ver-mas" href="irisvanherpen.html">Ver más</a>
                         </div>
-                        <!-- Proyecto 2 -->
+                        <!-- proyecto 2 -->
                         <div class="carousel-item">
-                            <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Identidad de Latas">
+                            <a href="identidadlatas.html">
+                                <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Identidad de Latas"
+                                    width="200px" height="283px">
+                            </a>
                             <h4>Identidad</h4>
-                            <a class="ver-mas" href="identidadlatas.html" >Ver más</a>
                         </div>
-                        <!-- Proyecto 3 -->
+                        <!-- proyecto 3 -->
                         <div class="carousel-item">
-                            <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg"
-                                alt="Proyecto Editorial">
+                            <a href="jacquelinecasey.html">
+                                <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg"
+                                    alt="Proyecto Editorial" width="200px" height="283px">
+                            </a>
                             <h4>Editorial</h4>
-                            <a class="ver-mas" href="jacquelinecasey.html" >Ver más</a>
                         </div>
-                        <!-- Proyecto 4 -->
                         <div class="carousel-item">
-                            <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
+                            <a href="infografia.html">
+                                <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía"
+                                    width="200px" height="283px">
+                            </a>
                             <h4>Infografía</h4>
-                            <a class="ver-mas" href="infografia.html" >Ver más</a>
                         </div>
-                        <!-- Proyecto 5 -->
+                        <!-- proyecto 5 -->
                         <div class="carousel-item">
-                            <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg"
-                                alt="AFiche océanos libres">
+                            <a href="oceanoslibres.html">
+                                <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg"
+                                    alt="Afiche océanos libres" width="200px" height="283px">
+                            </a>
                             <h4>Afiche</h4>
-                            <a class="ver-mas" href="oceanoslibres.html" >Ver más</a>
                         </div>
-                        <!-- Proyecto 6 -->
+                        <!-- proyecto 6 -->
                         <div class="carousel-item">
-                            <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg"
-                                alt="Imagen de identidad de juancito">
+                            <a href="juancito.html">
+                                <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg"
+                                    alt="Imagen de identidad de juancito" width="200px" height="283px">
+                            </a>
                             <h4>Identidad</h4>
-                            <a class="ver-mas" href="juancito.html" >Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -87,23 +95,23 @@
     <footer id="contacto">
         <div class="redes">
             <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
-                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+                <img class="icon" src="img/logos footer/instagram.png" alt="Logo instagram" width="40px" height="40px">
             </a>
             <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
-                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+                <img class="icon" src="img/logos footer/behance.png" alt="behance" width="40px" height="40px">
             </a>
         </div>
         <div class="mensaje">
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <img class="icon" src="img/logos footer/linkedin.png" alt="instagram" width="50px" height="50px">
                     <h4>Linkedin</h4>
                 </a>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                    <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <img src="./img/logos footer/gmail.png" width="50px" height="50px">
                     <h4>natiioviedo92@gmail.com</h4>
                 </a>
             </div>
