--- a/oceanoslibres.html
+++ b/oceanoslibres.html
@@ -13,29 +13,28 @@
         <section class="detalle-galeria">
             <div class="contenedor">
                 <img src="./img/proyectos/img-proyectos-detalle/oceanoslibres.jpg" alt="imagen afiche" width="1300"
-                    height="870px">
+                    height="916px">
             </div>
             <div class="detalle-titulo">
-                    <div class="boton-volver">
-                <a href="misproyectos.html">
-                    <img src="./img/iconos/cruz.png" alt="volver atras" width="50px"
-                        height="50px">
-                </a>
-                    </div>
-                    <article class="info-proyecto">
-                        <h2>*/ Afiche</h2>
-                        <h3>Océanos libres</h3>
-                        <p>Este afiche fue realizado en el marco de la materia Taller de Diseño II,
-                            con un enfoque en la problemática social de la contaminación ambiental. A través de una
-                            combinación de técnicas digitales y analógicas, este trabajo busca concientizar sobre el
-                            impacto
-                            devastador
-                            que los derrames de petróleo tienen en la fauna marina.</p>
-                    </article>
-                    <div class="boton-visitar">
-                        <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II"
-                            alt="Diseño de infograFIA" target="_blank"> visitar</a>
-                    </div>
+                <div class="boton-volver">
+                    <a href="misproyectos.html">
+                        <img src="./img/iconos/cruz.png" alt="volver atras" width="45px" height="45px">
+                    </a>
+                </div>
+                <article class="info-proyecto">
+                    <h2>*/ Afiche</h2>
+                    <h3>Océanos libres</h3>
+                    <p>Este afiche fue realizado en el marco de la materia Taller de Diseño II,
+                        con un enfoque en la problemática social de la contaminación ambiental. A través de una
+                        combinación de técnicas digitales y analógicas, este trabajo busca concientizar sobre el
+                        impacto
+                        devastador
+                        que los derrames de petróleo tienen en la fauna marina.</p>
+                </article>
+                <div class="boton-visitar">
+                    <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II"
+                        alt="Diseño de infograFIA" target="_blank"> visitar</a>
+                </div>
             </div>
         </section>
     </main>
