actualizacion sobre mi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <nav id="botonera">
+        <nav id="botonera"> <!---Aime no encontre la carrreccion que me indicaste de la botonera :( --->
             <div class="logo">
                 <a href="index.html">
                     <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
