--- a/sobremi.html
+++ b/sobremi.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo/ sobre mi </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/favicon/corazon.ico"  type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -25,15 +25,15 @@
     </header>
     <main>
         <section id="mipresentacion">
-            <div class="nombre">
-                <h2>*/Natalia Oviedo</h2>
+            <div class="avion-2">
                 <img src="./img/ilustraciones-todas/ilustracion-avion.png" alt="ilustracion de avión" width="350px"
                     height="150px">
             </div>
             <div class="mipresentacion">
-                <img src="./img/sobremi/fotos/torresdelpaine.jpg" alt="foto en torres del paine, Chile" width="450px"
-                    height="580px">
+                <img src="./img/sobremi/fotos/torresdelpaine.jpg" alt="foto en torres del paine, Chile" width="500px"
+                    height="640px">
                 <article class="presentacion">
+                    <h2>*/Natalia Oviedo</h2>
                     <h3>Diseñadora gráfica Jr.</h3>
                     <p>Hola! soy Natii, estudiante de Diseño y Comunicación Visual en la Universidad Nacional de Lanús,
                         en Buenos Aires. Actualmente estoy cursando el cuarto año. Me apasiona el diseño,
@@ -57,14 +57,22 @@
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
-            <ul>
-                <li><img src="./img/iconos/corazon3.png" alt=" Logo Creo" width="30px" height="32px">creo</li>
-                <li>pienso</li>
-                <li>viajo</li>
+            <div>
+            <ul class="intereses-giff">
+                <li><img src="./img/iconos/corazon-sobremi.png" alt=" Logo Creo" width="22px" height="19px">
+                    <p class="titulo-giff">creo</p>
+                </li>
+                <li><img src="./img/iconos/corazon-sobremi.png" alt=" Logo Creo" width="22px" height="19px">
+                    <p class="titulo-giff">pienso</p>
+                </li>
+                <li><img src="./img/iconos/corazon-sobremi.png" alt=" Logo Creo" width="22px" height="19px">
+                    <p class="titulo-giff">viajo</p>
+                </li>
             </ul>
-            <img src="./img/sobremi/giff/ilustracion.gif" class="gif" alt="animacion de lineas" width="1920" height="430">
+            <img src="./img/sobremi/giff/ilustracion.gif" class="gif" alt="animacion de lineas" width="1920 height=">
+        </div>
         </section>
-        <section class="informacion-personal"> <!---ver si este div es necesario--->
+        <section class="informacion-personal">
             <div class="grid-item uno">
                 <a href="#botonera" class="volver-arriba"><img src="./img/iconos/button.png" alt="volver-arriba"
                         width="60px" height="60px"></a>
@@ -92,13 +100,17 @@
             <div class="grid-item cuatro">
                 <h3>*/ Habilidades</h3>
                 <ul class="info-lista2">
-                    <li><img src="./img/sobremi/logos-habilidades/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
+                    <li><img src="./img/sobremi/logos-habilidades/ilustrador.png" alt=" Logo Ilustrator" width="60px"
+                            height="60px">
                     </li>
-                    <li><img src="./img/sobremi/logos-habilidades/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px">
+                    <li><img src="./img/sobremi/logos-habilidades/photoshop.png" alt=" Logo Photoshop" width="60px"
+                            height="60px">
                     </li>
-                    <li><img src="./img/sobremi/logos-habilidades/indesign.png" alt=" Logo Indesigne" width="60px" height="60px">
+                    <li><img src="./img/sobremi/logos-habilidades/indesign.png" alt=" Logo Indesigne" width="60px"
+                            height="60px">
                     </li>
-                    <li><img src="./img/sobremi/logos-habilidades/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
+                    <li><img src="./img/sobremi/logos-habilidades/figma.png" alt="Logo Figma" width="60px"
+                            height="60px"></li>
                 </ul>
             </div>
         </section>
@@ -115,14 +127,15 @@
         <div class="mensaje">
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                    <img class="icon" src="img/logos footer/linkedin.png" alt="instagram logo" width="50px" height="50px">
+                    <img class="icon" src="img/logos footer/linkedin.png" alt="instagram logo" width="50px"
+                        height="50px">
                     <h4>Linkedin</h4>
                 </a>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                    <img src="./img/logos footer/gmail.png" alt="gmail logo"  width="50px" height="50px">
+                    <img src="./img/logos footer/gmail.png" alt="gmail logo" width="50px" height="50px">
                     <h4>natiioviedo92@gmail.com</h4>
                 </a>
             </div>
