--- a/formulario.html
+++ b/formulario.html
@@ -26,13 +26,15 @@
     <main>
         <section class="contenedor-formulario">
             <div class="aviso">
-                <h2>*/ hablemos</h2>
                 <img src="./img/ilustraciones-todas/ilustracion-avion.png" alt="ilustracion de avion" width="360px"
                     height="161px">
             </div>
             <div class="formulario">
                 <div class="campos">
-                    <h3> ¿Te gustaría que trabajemos en un proyecto juntos? </h3>
+                    <div class="titulo-form">
+                        <h3> ¿Te gustaría que trabajemos en un proyecto juntos? </h3>
+                        <h2>*/ hablemos</h2>
+                    </div>
                     <form method="post"
                         action="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia email enviado desde el formulario"
                         target="_blank" enctype="text/plain">
