--- a/formulario.html
+++ b/formulario.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
